fix broken styles

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -241,6 +241,36 @@ main {
   display: grid;
   grid-template-columns: 1fr 10fr 1fr;
   row-gap: 5rem;
+  max-width: 1600px;
+  justify-self: center;
+}
+
+.custom-number-input {
+  user-select: none;
+  display: flex;
+  margin-right: 0.6rem;
+
+  input {
+    border: none;
+    width: 60px;
+    margin: 0 0.6rem;
+    text-align: center;
+    padding: 0.6rem 0;
+    background-color: transparent;
+    font-size: 1.1rem;
+    font-family: inherit;
+
+    &:hover {
+      color: inherit;
+    }
+  }
+
+  .decrement,
+  .increment {
+    cursor: pointer;
+    font-size: 1.9rem;
+    font-weight: lighter;
+  }
 }
 
 /*ALERT*/
