--- a/src/styles/_addToCart.scss
+++ b/src/styles/_addToCart.scss
@@ -4,34 +4,6 @@
   display: flex;
   align-items: center;
 
-  .custom-number-input {
-    user-select: none;
-    display: flex;
-    margin-right: 0.6rem;
-
-    input {
-      border: none;
-      width: 60px;
-      margin: 0 0.6rem;
-      text-align: center;
-      padding: 0.6rem 0;
-      background-color: transparent;
-      font-size: 1.1rem;
-      font-family: inherit;
-
-      &:hover {
-        color: inherit;
-      }
-    }
-
-    .decrement,
-    .increment {
-      cursor: pointer;
-      font-size: 1.9rem;
-      font-weight: lighter;
-    }
-  }
-
   input[type="submit"] {
     width: auto;
     display: inline-block;
